<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/methodAccessModifier"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/methodName"
                    android:id="@+id/methodName"
                    android:textColor="#076e0d"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="("
                    android:id="@+id/openingBracket"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/parameters"
                    android:id="@+id/parameters"
                    android:textColor="#e157b3"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=")"
                    android:id="@+id/closingBracket"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />


            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=":"
            android:id="@+id/separator"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:layout_weight="0.1" />
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView2"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="returnType"
                android:textColor="#ffa200"
                android:id="@+id/returnType"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="0.45" />
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isFinal"
            android:id="@+id/isMethodFinal"
            android:layout_gravity="center"
            android:checked="false"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isStatic"
            android:id="@+id/isMethodStatic"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>