...
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fieldAccessModifier"
            android:padding="5dp"
            android:layout_weight="0.35"
            android:layout_gravity="center_vertical" />
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fieldName"
                android:id="@+id/varName"
                android:layout_gravity="center_vertical"

                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="0.45" />

...
